No more legacy cells (#263)
* WIP: No more legacy cells

* Fix tests + formatting is no longer optional on cells that support it

* Update LogRecordIndex type

* Drop unused copy of generated bindings

* Update OpenAPI schema

* Allow external instantiation of Otel types

* Derive (Partial)Ord for Timestamp

* Fix form encoding in provider cells

* Cleaner encodeFormComponent() implementation
